# messenger_backend_service

./: .gitignore  Dockerfile  README.md  pyproject.toml  start_docker.bat  start_docker.sh
src/: main.py  settings.py
src/api/: __init__.py  chat_ws_router.py  login_router.py  messenger_router.py  user_router.py
src/auth/: __init__.py  dals.py  models.py  schemas.py  session.py
src/auth/services/: auth.py  user.py
src/auth/utils/: security.py
src/messenger/: __init__.py  dependencies.py  schemas.py
src/messenger/chat/: connection_manager.py  html_stub_dev.py
src/messenger/db/: __init__.py  base_dal.py
src/messenger/db/scylladb_sync/: __init__.py  connection.py  dal.py  models.py
src/messenger/services/: __init__.py  contact_service.py  message_service.py  topic_service.py
