[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["say1ts <tsydenovsayan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
icecream = "^2.1.3"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
loguru = "^0.7.2"
scylla-driver = "^3.26.8"
envparse = "^0.2.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
black = "^23.12.1"
alembic = "^1.13.1"


[tool.poetry.group.dev_auth.dependencies]
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
loguru = "^0.7.2"
envparse = "^0.2.0"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
